fix letter spacing on keyboard

--- a/src/client/Keyboard/Keyboard.less
+++ b/src/client/Keyboard/Keyboard.less
@@ -2,6 +2,7 @@
 
 .keyboard {
     text-shadow: none;
+    letter-spacing: initial;
     
     &.isNotPlaying {
         transition: box-shadow 0.3s ease-out;
